--- a/assets/scss/diagonalBackground.scss
+++ b/assets/scss/diagonalBackground.scss
@@ -2,7 +2,7 @@
     --width: 100vw;
     --full-width: 100vw;
     
-    @media (min-width: 42em) {
+    @media (min-width: 42rem) {
       --width: 42rem;
     }
     
